# adpwned

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cli.rs  consts.rs  main.rs
