[package]
name = "adpwned"
authors = ["Travis Veazey <travis.veazey@k12northstar.org>"]
description = "Check Active Directory accounts for passwords known to have been breached"
version = "1.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["password", "haveibeenpwned", "security", "active-directory"]
categories = ["command-line-utilities"]
repository = "https://github.com/TravisVeazey/adpwned"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1", features = ["derive"] }
encoding_rs_io = "0.1"

